--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
   <!-- 
 <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22></text></svg>">
  -->
-  <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico?">
-  <link rel="stylesheet" href="/assets/css/main.css">
-  <link rel="canonical" href="/">
+  <link rel="shortcut icon" type="image/x-icon" href="../assets/favicon.ico?">
+  <link rel="stylesheet" href="../assets/css/main.css">
+  <link rel="canonical" href="./">
 
   <!-- JQuery -->
   <!-- jQuery -->
@@ -142,7 +142,7 @@
           <ul class="navbar-nav ml-auto flex-nowrap">
             <!-- Home -->
             <li class="nav-item ">
-              <a class="nav-link" href="/">
+              <a class="nav-link" href="./">
                 Home
 
               </a>
@@ -168,7 +168,7 @@
 
 
             <li class="nav-item ">
-              <a class="nav-link" href="/CV/">
+              <a class="nav-link" href="./CV/">
                 CV
 
               </a>
@@ -179,7 +179,7 @@
 
 
             <li class="nav-item ">
-              <a class="nav-link" href="/projects/">
+              <a class="nav-link" href="./projects/">
                 Projects
 
               </a>
@@ -190,7 +190,7 @@
 
 
             <li class="nav-item ">
-              <a class="nav-link" href="/work/">
+              <a class="nav-link" href="./work/">
                 Work
 
               </a>
