--- a/work/index.html
+++ b/work/index.html
@@ -53,9 +53,9 @@
   <!-- 
 <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22></text></svg>">
  -->
-  <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico?">
-  <link rel="stylesheet" href="/assets/css/main.css">
-  <link rel="canonical" href="/work/">
+  <link rel="shortcut icon" type="image/x-icon" href="../assets/favicon.ico?">
+  <link rel="stylesheet" href="../assets/css/main.css">
+  <link rel="canonical" href="../work/">
 
   <!-- JQuery -->
   <!-- jQuery -->
@@ -143,7 +143,7 @@
           <ul class="navbar-nav ml-auto flex-nowrap">
             <!-- Home -->
             <li class="nav-item ">
-              <a class="nav-link" href="/">
+              <a class="nav-link" href="../">
                 Home
 
               </a>
@@ -171,7 +171,7 @@
 
 
             <li class="nav-item ">
-              <a class="nav-link" href="/CV/">
+              <a class="nav-link" href="../CV/">
                 CV
 
               </a>
@@ -182,7 +182,7 @@
 
 
             <li class="nav-item ">
-              <a class="nav-link" href="/projects/">
+              <a class="nav-link" href="../projects/">
                 Projects
 
               </a>
@@ -193,7 +193,7 @@
 
 
             <li class="nav-item active">
-              <a class="nav-link" href="/work/">
+              <a class="nav-link" href="../work/">
                 Work
 
                 <span class="sr-only">(current)</span>
