--- a/CV/index.html
+++ b/CV/index.html
@@ -209,11 +209,11 @@
     <h4>I am on the Job Market!!</h4>
 <p><br />
 <!-- <a href="/CV.pdf">
-    <img src="/assets/pdf.svg" alt="CV" title="Dowload CV" height="30px" />  
+    <img src="../assets/pdf.svg" alt="CV" title="Dowload CV" height="30px" />  
     <span style="color:blue; font-size:1.25em"> Curriculum Vitae </span>
 </a>       -->
 <a href="/Resume.pdf">
-    <img src="/assets/pdf.svg" alt="Resume" title="Dowload Resume" height="30px" />  
+    <img src="../assets/pdf.svg" alt="Resume" title="Dowload Resume" height="30px" />  
     <span style="color:blue; font-size:1.25em"> Resume </span>
 </a></p>
 
@@ -280,7 +280,7 @@
 <!-- Mansory & imagesLoaded -->
 <script defer src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 <script defer src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
-<script defer src="/assets/js/mansory.js" type="text/javascript"></script>
+<script defer src="../assets/js/mansory.js" type="text/javascript"></script>
 
 
   
@@ -288,11 +288,11 @@
 
 <!-- Medium Zoom JS -->
 <script src="https://cdn.jsdelivr.net/npm/medium-zoom@1.0.6/dist/medium-zoom.min.js" integrity="sha256-EdPgYcPk/IIrw7FYeuJQexva49pVRZNmt3LculEr7zM=" crossorigin="anonymous"></script>
-<script src="/assets/js/zoom.js"></script>
+<script src="../assets/js/zoom.js"></script>
 
 
 <!-- Load Common JS -->
-<script src="/assets/js/common.js"></script>
+<script src="../assets/js/common.js"></script>
 
 
 </html>
