--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
         <div class="profile float-left">
 
-          <img style="margin-left: -1em; margin-bottom: 0.1em" src="/assets/img/prof_pic.png">
+          <img style="margin-left: -1em; margin-bottom: 0.1em" src="../assets/img/prof_pic.png">
 
 
         </div>
@@ -352,7 +352,7 @@
 
             <div class="work-item">
               <div class="work-bubble-with-date">
-                <img src="/assets/img/teaching.jpg" class="work-bubble" />
+                <img src="../assets/img/teaching.jpg" class="work-bubble" />
               </div>
               <p class="work-text">
                 <strong>Graduate Teaching Assistant | Georgia Tech</strong> <br />
@@ -365,7 +365,7 @@
 
             <div class="work-item vertical-center-text">
               <div class="work-bubble-with-date">
-                <img src="/assets/img/smp.jpg" class="work-bubble" />
+                <img src="../assets/img/smp.jpg" class="work-bubble" />
               </div>
               <p class="work-text">
                 <strong></strong> <br />
@@ -381,7 +381,7 @@
 
             <div class="work-item vertical-center-text">
               <div class="work-bubble-with-date">
-                <img src="/assets/img/erc.jpeg" class="work-bubble" />
+                <img src="../assets/img/erc.jpeg" class="work-bubble" />
               </div>
               <p class="work-text">
                 <strong>Overseeing the financial administration of the department and financial reporting for two academic years, Jul 2019 - May 2021</strong> <br />
@@ -469,7 +469,7 @@
 <!-- Mansory & imagesLoaded -->
 <script defer src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 <script defer src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
-<script defer src="/assets/js/mansory.js" type="text/javascript"></script>
+<script defer src="../assets/js/mansory.js" type="text/javascript"></script>
 
 
 
@@ -478,11 +478,11 @@
 <!-- Medium Zoom JS -->
 <script src="https://cdn.jsdelivr.net/npm/medium-zoom@1.0.6/dist/medium-zoom.min.js"
   integrity="sha256-EdPgYcPk/IIrw7FYeuJQexva49pVRZNmt3LculEr7zM=" crossorigin="anonymous"></script>
-<script src="/assets/js/zoom.js"></script>
+<script src="../assets/js/zoom.js"></script>
 
 
 <!-- Load Common JS -->
-<script src="/assets/js/common.js"></script>
+<script src="../assets/js/common.js"></script>
 
 
 </html>
