--- a/projects/index.html
+++ b/projects/index.html
@@ -211,7 +211,7 @@
     <div class="work-item vertical-center-text">
       <div class="work-bubble-with-date">
         <img
-          src="/assets/img/project/kaggle.png"
+          src="../assets/img/project/kaggle.png"
           alt=""
           class="work-bubble"
         />
@@ -236,7 +236,7 @@
     <div class="work-item vertical-center-text">
       <div class="work-bubble-with-date">
         <img
-        src="/assets/img/project/codeforgood.png"
+        src="../assets/img/project/codeforgood.png"
           alt=""
           class="work-bubble"
         />
@@ -260,7 +260,7 @@
     <div class="work-item vertical-center-text">
       <div class="work-bubble-with-date">
         <img
-        src="/assets/img/project/buddyloan.png"
+        src="../assets/img/project/buddyloan.png"
           alt=""
           class="work-bubble"
         />
@@ -294,7 +294,7 @@
       /> -->
       <div class="work-bubble-with-date">
         <img
-        src="/assets/img/project/drone.png"
+        src="../assets/img/project/drone.png"
           alt=""
           class="work-bubble"
         />
@@ -333,7 +333,7 @@
     <div class="work-item vertical-center-text">
       <div class="work-bubble-with-date">
         <img
-        src="/assets/img/project/cap.png"
+        src="../assets/img/project/cap.png"
           alt=""
           class="work-bubble"
         />
@@ -358,7 +358,7 @@
     <div class="work-item vertical-center-text">
       <div class="work-bubble-with-date">
         <img
-        src="/assets/img/project/sleep.png"
+        src="../assets/img/project/sleep.png"
           alt=""
           class="work-bubble"
         />
@@ -445,7 +445,7 @@
 <!-- Mansory & imagesLoaded -->
 <script defer src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 <script defer src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
-<script defer src="/assets/js/mansory.js" type="text/javascript"></script>
+<script defer src="../assets/js/mansory.js" type="text/javascript"></script>
 
 
   
@@ -453,11 +453,11 @@
 
 <!-- Medium Zoom JS -->
 <script src="https://cdn.jsdelivr.net/npm/medium-zoom@1.0.6/dist/medium-zoom.min.js" integrity="sha256-EdPgYcPk/IIrw7FYeuJQexva49pVRZNmt3LculEr7zM=" crossorigin="anonymous"></script>
-<script src="/assets/js/zoom.js"></script>
+<script src="../assets/js/zoom.js"></script>
 
 
 <!-- Load Common JS -->
-<script src="/assets/js/common.js"></script>
+<script src="../assets/js/common.js"></script>
 
 
 </html>
