--- a/work/index.html
+++ b/work/index.html
@@ -221,7 +221,7 @@
 
       <!-- <div class="work-item vertical-center-text">
     <div class="work-bubble-with-date">
-      <img src="/assets/img/work/amazon.png" class="work-bubble" />
+      <img src="../assets/img/work/amazon.png" class="work-bubble" />
       <h6>Sept '23 - Jan'24</h6>
     </div>
     <p class="work-text">
@@ -235,7 +235,7 @@
   </div> -->
       <div class="work-item vertical-center-text">
         <div class="work-bubble-with-date">
-          <img src="/assets/img/work/georgiatech.png" class="work-bubble" />
+          <img src="../assets/img/work/georgiatech.png" class="work-bubble" />
           <h6>Aug '23 - Present</h6>
         </div>
         <div style="display: block;">
@@ -257,7 +257,7 @@
 
       <div class="work-item vertical-center-text">
         <div class="work-bubble-with-date">
-            <img src="/assets/img/natwest.png" class="work-bubble" />
+            <img src="../assets/img/natwest.png" class="work-bubble" />
             <h6>July 2022 - July 2024</h6>
         </div>
         <div style="display: block;">
@@ -280,7 +280,7 @@
 
     <div class="work-item vertical-center-text">
       <div class="work-bubble-with-date">
-          <img src="/assets/img/detect.png" class="work-bubble" />
+          <img src="../assets/img/detect.png" class="work-bubble" />
           <h6>May 2021 - July 2021</h6>
       </div>
       <div style="display: block;">
@@ -300,7 +300,7 @@
 
   <div class="work-item vertical-center-text">
     <div class="work-bubble-with-date">
-        <img src="/assets/img/erc.jpeg" class="work-bubble" />
+        <img src="../assets/img/erc.jpeg" class="work-bubble" />
         <h6>Jul 2019 - May 2021</h6>
     </div>
     <div style="display: block;">
@@ -380,7 +380,7 @@
 <!-- Mansory & imagesLoaded -->
 <script defer src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 <script defer src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
-<script defer src="/assets/js/mansory.js" type="text/javascript"></script>
+<script defer src="../assets/js/mansory.js" type="text/javascript"></script>
 
 
 
@@ -389,11 +389,11 @@
 <!-- Medium Zoom JS -->
 <script src="https://cdn.jsdelivr.net/npm/medium-zoom@1.0.6/dist/medium-zoom.min.js"
   integrity="sha256-EdPgYcPk/IIrw7FYeuJQexva49pVRZNmt3LculEr7zM=" crossorigin="anonymous"></script>
-<script src="/assets/js/zoom.js"></script>
+<script src="../assets/js/zoom.js"></script>
 
 
 <!-- Load Common JS -->
-<script src="/assets/js/common.js"></script>
+<script src="../assets/js/common.js"></script>
 
 
 </html>
