--- a/CV/index.html
+++ b/CV/index.html
@@ -45,8 +45,8 @@
 <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22></text></svg>">
  -->
 <link rel="shortcut icon" type="image/x-icon" href="../assets/favicon.ico?">
-<link rel="stylesheet" href="../assets/css/main.css">
-<link rel="canonical" href="../CV/">
+<link rel="stylesheet" href="./assets/css/main.css">
+<link rel="canonical" href="./CV/">
 
 <!-- JQuery -->
 <!-- jQuery -->
