cv file changes

--- a/CV/index.html
+++ b/CV/index.html
@@ -212,12 +212,12 @@
     <img src="../assets/pdf.svg" alt="CV" title="Dowload CV" height="30px" />  
     <span style="color:blue; font-size:1.25em"> Curriculum Vitae </span>
 </a>       -->
-<a href="/Resume.pdf">
-    <img src="../assets/pdf.svg" alt="Resume" title="Dowload Resume" height="30px" />  
+<a href="../Resume.pdf">
+    <img src="./assets/pdf.svg" alt="Resume" title="Dowload Resume" height="30px" />  
     <span style="color:blue; font-size:1.25em"> Resume </span>
 </a></p>
 
-<iframe src="/Resume.pdf" width="100%" height="600px"></iframe>
+<iframe src="../Resume.pdf" width="100%" height="600px"></iframe>
 
   </article>
 
