--- a/CV/index.html
+++ b/CV/index.html
@@ -213,7 +213,7 @@
     <span style="color:blue; font-size:1.25em"> Curriculum Vitae </span>
 </a>       -->
 <a href="../Resume.pdf">
-    <img src="./assets/pdf.svg" alt="Resume" title="Dowload Resume" height="30px" />  
+    <img src="../assets/pdf.svg" alt="Resume" title="Dowload Resume" height="30px" />  
     <span style="color:blue; font-size:1.25em"> Resume </span>
 </a></p>
 
